<resources>
    <string name="app_name">MyLibraryProject</string>
    <string name="title_activity_main">首页</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_save">保存</string>
    <string name="menu_go">Go</string>
    <string name="menu_next">Next</string>
    <string name="menu_from">From</string>
    <string name="menu_index">Index</string>
    <string name="title_activity_share_tab">分享</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_horizontal_scrollview">HorizontalScrollviewActivity</string>
    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_pull_refresh">PullRefreshActivity</string>
    <string name="title_activity_slide_menu">SlideMenuActivity</string>


</resources>
